docker-registry/docker-registry.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docker-registry
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      volumes:
        - name: config
          configMap:
            name: docker-registry
            items:
              - key: registry-config.yml
                path: config.yml
        - name: htpasswd
          secret:
            secretName: docker-registry
            items:
              - key: HTPASSWD
                path: htpasswd
        - name: storage
          emptyDir: {}  
      containers:
        - name: docker-registry
          image: registry:2.6.2
          ports:
          - name: http
            containerPort: 5000
          volumeMounts:
            - name: config
              mountPath: /etc/docker/registry
              readOnly: true
            - name: htpasswd
              mountPath: /auth
              readOnly: true
            - name: storage
              mountPath: /var/lib/registry
---
kind: Service
apiVersion: v1
metadata:
  name: docker-registry
  namespace: docker-registry
  labels:
    app: docker-registry
spec:
  type: NodePort
  selector:
    app: docker-registry
  ports:
  - name: http
    port: 5000
    targetPort: 5000
